assets/stylesheets/styles.css
body {
  font-family: Domine, serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  line-height: 200%;
  text-align: justify;
  counter-reset: figcount;
}

h1,
h2,
h3,
footer {
  font-family: Roboto, sans-serif;
}

img {
  width: 100% !important;
  max-width: 100%;
  height: auto;
}

.thumbnail {
  width: 50% !important;
}

iframe {
  width: 100% !important;
  max-width: 100%;
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.25rem;
}

@media (width >= 768px) {
  .grid {
    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
    column-gap: 2rem;
  }
}

.grid > * {
  grid-column: 1;
}

@media (width >= 768px) {
  .grid > .image {
    grid-column: 2;
  }
}

figure {
  counter-increment: figcount;
}

figure figcaption::before {
  content: counter(figcount) '. ';
  font-weight: bold;
}

figcaption {
  text-align: center;
}

.footnotes::before {
  content: 'Footnotes:';
}

footer {
  text-align: right;
}

.chapman {
  background-color: #909cc2;
}

.chapman a {
  color: #fff;
}

.jar {
  background-color: #ff1744;
}

.jar a {
  color: #fff;
}

